[INJIWEB-1528] update error codes in openapi documentation and swagger annotations for storing user data into db endpoint in login flow
