# src/main/java/io/mosip/mimoto/controller/UsersController.java
@@ -47,7 +47,8 @@ public class UsersController {
     @Operation(summary = "Retrieve user metadata from the database", description = "This API is secured using session-based authentication. When a request is made, the server retrieves the session ID from the Cookie header and uses it to fetch session details from Redis. From the session, it extracts the user's unique identifier (typically the sub field provided by the identity provider) along with the clientRegistrationId. These values are then used to retrieve the user's metadata from the database. If successful, the API returns the user's profile information. If any issue occurs such as missing user data or server error then an appropriate error response is returned.", operationId = "getUserProfileFromDB", security = @SecurityRequirement(name = "SessionAuth"))
     @ApiResponse(responseCode = "200", description = "User profile retrieved successfully from the Database", content = @Content(mediaType = "application/json", schema = @Schema(implementation = UserMetadataDTO.class), examples = @ExampleObject(name = "Success response", value = SwaggerExampleConstants.FETCH_USER_PROFILE_SUCCESS)))
     @ApiResponse(responseCode = "404", description = "User data not found in the database", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorDTO.class), examples = @ExampleObject(name = "User not found in the Database", value = "{\"errorCode\": \"invalid_user\", \"errorMessage\": \"User not found. Please check your credentials or login again\"}")))
-    @ApiResponse(responseCode = "500", description = "Internal server error", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorDTO.class), examples = {@ExampleObject(name = "Database connection failure", value = "{\"errorCode\": \"RESIDENT-APP-047\", \"errorMessage\": \"Failed to connect to the shared database while fetching User Metadata data from the database\"}"), @ExampleObject(name = "Unexpected server error", value = "{\"errorCode\": \"RESIDENT-APP-049\", \"errorMessage\": \"An unexpected error occurred while retrieving user profile from the database\"}"), @ExampleObject(name = "User metadata not found in the Database", value = "{\"errorCode\": \"RESIDENT-APP-049\", \"errorMessage\": \"An unexpected error occurred while downloading and storing user metadata into database\"}")}))
+    @ApiResponse(responseCode = "500", description = "Internal server error - any error occurred while decrypting the data or fetching the data from the database", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorDTO.class), examples = @ExampleObject(name = "Unexpected Server Error", value = "{\"errorCode\": \"internal_server_error\", \"errorMessage\": \"We are unable to process request now\"}")))
+    @ApiResponse(responseCode = "503", description = "Service unavailable", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ErrorDTO.class), examples = @ExampleObject(name = "Database connection failure", value = "{\"errorCode\": \"database_unavailable\", \"errorMessage\": \"Failed to connect to the database\"}")))
     @GetMapping("/db")
     public ResponseEntity<UserMetadataDTO> getUserProfile(Authentication authentication, HttpSession session) {
 
